[BUGFIX] Tooltip z-index over zoom control

--- a/scss/modules/_map.scss
+++ b/scss/modules/_map.scss
@@ -9,7 +9,7 @@
     right: $button-distance;
     top: $button-distance;
     unicode-bidi: bidi-override;
-    z-index: 100;
+    z-index: 1001;
 
     button {
       margin-left: $button-distance;
